--- a/style.css
+++ b/style.css
@@ -178,3 +178,30 @@ footer{
     padding-bottom: 10px;
 
 }
+.search_list{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    
+}
+
+.search_list .reviewed{
+    flex-basis: 15%;
+    font-size: 3vw;
+    font-weight: bolder;
+    color: #091336;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.search_list .item_check{
+    flex-basis:50%;
+    font-size: 3vw;
+    font-weight: bolder;
+    color: #091336;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.break {
+    flex-basis: 100%;
+    height: 0;
+}
