--- a/style.css
+++ b/style.css
@@ -192,6 +192,8 @@ footer{
     font-weight: bolder;
     color: #091336;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 .search_list .item_check{
@@ -200,7 +202,22 @@ footer{
     font-weight: bolder;
     color: #091336;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    transition: 0.4s
 }
+
+.active, .search_list .item_check:hover {
+    background-color: grey;
+}
+
+.panel {
+    padding: 0 18px;
+    background-color: whitesmoke;
+    display: none;
+    overflow: hidden;
+}
+
 .break {
     flex-basis: 100%;
     height: 0;
