using css grid trial

--- a/style.css
+++ b/style.css
@@ -179,11 +179,26 @@ footer{
 
 }
 .search_list{
-    display: flex;
+    /*display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
-    
+    justify-content: space-around;*/
+    display: grid;
+    grid-template-columns: 80% 15%;
+    column-gap: 5%;
+}
+
+.search_list .reviewed {
+    grid-column-start: 2;
+    grid-column-end: 3;
+}
+.search_list .item_check {
+    grid-column-start: 1;
+    grid-column-end: 2;
+}
+#panel_1 {
+    grid-row-start: 2;
+    grid-row-end: 3;
 }
 
 .search_list .reviewed{
@@ -221,4 +236,10 @@ footer{
 .break {
     flex-basis: 100%;
     height: 0;
+}
+
+#step_1 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
