Got the template to work for the reporting steps - including the accordion alignment

--- a/style.css
+++ b/style.css
@@ -184,26 +184,34 @@ footer{
     flex-wrap: wrap;
     justify-content: space-around;*/
     display: grid;
-    grid-template-columns: 80% 15%;
-    column-gap: 5%;
+    grid-template-columns: 1fr 7fr 1fr 2fr 1fr;
 }
 
 .search_list .reviewed {
-    grid-column-start: 2;
-    grid-column-end: 3;
+    grid-column-start: 4;
 }
 .search_list .item_check {
-    grid-column-start: 1;
-    grid-column-end: 2;
+    grid-column-start: 2;
 }
-#panel_1 {
+/*#panel_1 {
     grid-row-start: 2;
     grid-row-end: 3;
+}*/
+
+.panel {
+    grid-column-start: 2;
+}
+.grid_row_1 {
+    grid-row:span 1;
 }
 
+.grid_row_2 {
+    grid-row: span 2;
+}
+
+
 .search_list .reviewed{
-    flex-basis: 15%;
-    font-size: 3vw;
+    font-size: 2vw;
     font-weight: bolder;
     color: #091336;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -212,8 +220,7 @@ footer{
 }
 
 .search_list .item_check{
-    flex-basis:50%;
-    font-size: 3vw;
+    font-size: 2vw;
     font-weight: bolder;
     color: #091336;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -234,12 +241,21 @@ footer{
 }
 
 .break {
-    flex-basis: 100%;
     height: 0;
 }
 
-#step_1 {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+.container_report_1 {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    background-color: #f9faf8;
+    justify-content: center;
+
+}
+
+.norm_rep {
+
+font-size: 3vw;
+color:#101996;
+font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
